k3s/services/pihole/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - env:
        - name: ServerIP
          value: 192.168.4.160
        - name: WEBPASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: pihole-website-password
        image: pihole/pihole
        imagePullPolicy: Always
        name: pihole
        ports:
        - containerPort: 80
          name: pihole-http
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 67
          name: client-udp
          protocol: UDP
        resources: {
          requests: {
            cpu: 128m,
            memory: 128Mi
          },
          limits: {
            cpu: 256m,
            memory: 256Mi
          }
        }
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-data
        - mountPath: /etc/dnsmasq.d/02-custom.conf
          name: custom-dnsmasq
          subPath: 02-custom.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pihole-data
        persistentVolumeClaim:
          claimName: pihole-local-data-pvc
      - configMap:
          defaultMode: 420
          name: pihole-custom-dnsmasq
        name: custom-dnsmasq
