k3s/services/pihole/service.yml
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-frontend
spec:
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-dns
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
  loadBalancerIP: 192.168.4.160
