k3s/services/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pihole.homelab.kevinlutzer.ca
    secretName: pihole-kevinlutzer-ca-tls
  rules:
  - host: pihole.homelab.kevinlutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-frontend
              port:
                number: 80
